reformatted pages and added documentation page

--- a/madlibs.css
+++ b/madlibs.css
@@ -18,6 +18,15 @@ html {
   line-height: 1;
 }
 
+h1{
+  text-align: center;
+}
+
+form{
+  width: 50%;
+  margin: auto;
+}
+
 ul {
   list-style: none;
 }
@@ -27,7 +36,7 @@ section {
 }
 
 body {
-  background: #edeff0;
+  background: orange;
   padding: 50px 0 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 62.5%;
@@ -55,13 +64,14 @@ p {
 
 .container {
   box-sizing: border-box;
-  width: 90%;
+  width: 50%;
   max-width: 1080px;
   background: white;
   padding: 30px 15px;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
+  justify-content: center;
   border-radius: 5px;
   -webkit-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
