--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ h1,h2{
     flex-direction: row;
     width: 90%;
     margin: auto;
+    border-radius: 1em;
 }
 
 html{
@@ -19,10 +20,6 @@ html{
     order: -1;
 }
 
-a{
-    width: 30%;
-}
-
 #box1, #box3{
     padding: 1em;
     width: 40%;
@@ -30,6 +27,11 @@ a{
 
 #box2{
     width: 20%;
+}
+
+#box4{
+    width: 30%;
+    margin: auto;
 }
 
 .box{
