--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,19 @@ h1,h2{
     text-align: center;
 }
 
+body{
+    background: orange;
+}
+
+.container{
+    background: white;
+    margin: auto;
+    padding: 1em;
+    width: 90%;
+    height: 30%;
+    border-radius: 2em;
+}
+
 #boxes{
     display: flex;
     flex: 1 0 auto;
