--- a/dots-css/dotsandboxes.css
+++ b/dots-css/dotsandboxes.css
@@ -2,9 +2,16 @@
 body {
 	margin: 0px;
 	padding: 0px;
+	background: orange;
 }
 
-/******************************************************************************/
+.container{
+	margin: 10px;
+	padding: 1em;
+	background: white;
+	justify-content: center;
+	border-radius: 2em;
+}
 
 #game-display {
 	margin: 25px;
